unpackaged/main/default/objects/E2CP__Canned_Comment_Filter__c/E2CP__Canned_Comment_Filter__c.object-meta.xml
<CustomObject>
    <description>Used to determine which Canned Responses Categories are available for use from the New Comment page based on the selected Controlling Field and Values.</description>
    <label>Canned Response Filter</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Canned Response Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Response Filters (Deprecated)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>