unpackaged/main/default/objects/E2CP__Canned_Comment_Filter__c/fields/E2CP__Controlling_Field__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Controlling_Field__c</fullName>
    <inlineHelpText>The field on Case which will be checked to determine if this group should be included in the displayed Canned Comment options for the New Comment page.</inlineHelpText>
    <label>Controlling Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>