unpackaged/main/default/objects/E2CP__Canned_Comment_Filter__c/fields/E2CP__Controlling_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Controlling_Field_Values__c</fullName>
    <inlineHelpText>Values for the Case Controlling Field that will need to match in order for this group to be included in the available Canned Comment options for the New Comment page.</inlineHelpText>
    <label>Controlling Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>