unpackaged/main/default/objects/E2CP__Canned_Comment_Filter__c/fields/E2CP__Description__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Description__c</fullName>
    <inlineHelpText>Optional text describing the Canned Comment Filter and a way to distinguish it from other filters.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>