unpackaged/main/default/objects/E2CP__Canned_Comment_Filter__c/listViews/E2CP__All.listView-meta.xml
<ListView>
    <fullName>E2CP__All</fullName>
    <columns>NAME</columns>
    <columns>E2CP__Description__c</columns>
    <columns>E2CP__Controlling_Field__c</columns>
    <columns>E2CP__Controlling_Field_Values__c</columns>
    <columns>E2CP__Categories__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>